<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="open_drawer" translatable="false">pen navigation drawer</string>
    <string name="close_drawer" translatable="false">Close navigation drawer</string>
    <string name="app_name" translatable="false">PlanTEA</string>
    <string name="btn_Acceder">Acceder</string>
    <string name="btn_CambiarPass">Cambiar Contraseña</string>
    <string name="lbl_Pass">Contraseña actual</string>
    <string name="lbl_NewPass">Contraseña nueva</string>
    <string name="lbl_RepPass">Volver a introducir la contraseña</string>
    <string name="lbl_NuevaPass">Nueva contraseña</string>
    <string name="btn_Guardar">Guardar</string>
    <string name="btn_tutorial">Volver a ver el tutorial</string>
    <string name="lbl_profesionales">Profesionales</string>
    <string name="lbl_Consultas">Consultas</string>
    <string name="lbl_Lugares">Lugares</string>
    <string name="lbl_Favoritos">Favoritos</string>
    <string name="lbl_IrColegio">Ir al colegio</string>
    <string name="lbl_IrMedico">Ir al médico</string>
    <string name="lbl_Comprar">Hacer la compra</string>
    <string name="lbl_CortarsePelo">Cortarse el pelo</string>
    <string name="lbl_Desplazamiento">Desplazamiento</string>
    <string name="lbl_Accion">Acción</string>
    <string name="lbl_Entretenimiento">Entretenimiento</string>
    <string name="lbl_Recompensa">Recompensa</string>
    <string name="lbl_Aniadir">Añadir</string>
    <string name="lbl_NuevoPicto">Añadir pictograma</string>
    <string name="lbl_imprevistoPicto">Cambiar pictograma</string>
    <string name="lbl_NuevoPictoSemana">Añadir pictograma a la semana</string>
    <string name="lbl_NuevaCategoria">Añadir categoría</string>
    <string name="lbl_Planes">Planificaciones Disponibles</string>
    <string name="recordar">Recordar…</string>
    <string name="recordar_5min">5 minutos antes</string>
    <string name="recordar_1hora">1 hora antes</string>
    <string name="recordar_1dia">1 día antes</string>
    <string name="recordar_personalizado">A las…</string>
    <string name="aceptar">Aceptar</string>
    <string name="pantalla_calendario">Calendario</string>
    <string name="actividades">Actividades</string>
    <string name="titulo_traductor">Traductor</string>
    <string name="lbl_politica_privacidad">Política de privacidad</string>
    <string name="lbl_ultima_actualizacion">Última actualización: 15 de mayo, 2025</string>
    <string name="lbl_politica_parrafo1">Esta política de privacidad describe las políticas y procedimientos de PlanTEA sobre la recopilación, uso y divulgación de su información en la aplicación móvil PlanTEA y los servicios, características, contenido o aplicaciones relacionadas con ello (colectivamente, "PlanTEA"). En relación con su uso de PlanTEA, recibimos información sobre usted de diversas fuentes, que incluyen a través de su cuenta de usuario de PlanTEA y el uso de nuestra aplicación móvil, o cualquier otra aplicación nuestra que este vinculada a este aviso de privacidad.</string>
    <string name="lbl_politica_parrafo2">Al utilizar PlanTEA usted está dando su consentimiento para la recopilación, transferencia, manipulación, almacenamiento, transmisión, divulgación y otros usos de su información según se describe en esta Política de privacidad.</string>
    <string name="lbl_politica_titulo_parrafo3">1. ¿Preguntas o dudas?</string>
    <string name="lbl_politica_parrafo3">Leer este aviso de privacidad le ayudará a comprender sus derechos y opciones de privacidad. Si no está de acuerdo con nuestras políticas y prácticas, por favor, no utilice nuestros servicios. Si aún tiene alguna pregunta o inquietud, por favor contáctenos en plantea.asistencia@gmail.com</string>
    <string name="lbl_politica_titulo_parrafo4">2. ¿Qué cubre esta política de privacidad?</string>
    <string name="lbl_politica_parrafo4">Esta Política de privacidad abarca el tratamiento de la información personal identificable ("Información personal") que recopilamos cuando está utilizando o accediendo a PlanTEA. Esta Política de privacidad no se aplica a las prácticas de terceros que no poseemos o controlamos, incluyendo, pero no limitándose a, cualquier sitio web de terceros, fuentes de contenido, servicios y aplicaciones ("Servicios de terceros") a los que elija acceder a través de PlanTEA, o a individuos que no administramos ni empleamos. Aunque intentamos facilitar el acceso solo a aquellos servicios de terceros que comparten nuestro respeto por su privacidad, no podemos asumir la responsabilidad por el contenido o las políticas de privacidad de esos servicios de terceros. Le animamos a revisar cuidadosamente las políticas de privacidad de cualquier servicio de terceros al que acceda.</string>
    <string name="lbl_politica_titulo_parrafo5">3. ¿Qué información recopila PlanTEA?</string>
    <string name="lbl_politica_parrafo5">Recopilamos información personal que usted nos proporciona voluntariamente cuando se registra en los servicios, muestra interés en obtener información sobre nosotros o nuestros productos y servicios, participa en actividades en los servicios o de otra manera cuando se pone en contacto con nosotros.</string>
    <string name="lbl_politica_subtitulo_parrafo6">Información personal proporcionada por usted</string>
    <string name="lbl_politica_parrafo6">La información personal que recopilamos depende del contexto de sus interacciones con nosotros y los servicios, las elecciones que realice y los productos y funciones que utilice. La información personal que recopilamos puede incluir lo siguiente: Nombres, direcciones de correo electrónico, nombres de usuario, contraseñas, datos de contacto o autenticación.</string>
    <string name="lbl_politica_subtitulo_parrafo7">Información delicada</string>
    <string name="lbl_politica_parrafo7">No procesamos información delicada.</string>
    <string name="lbl_politica_subtitulo_parrafo8">Datos de la aplicación</string>
    <string name="lbl_politica_parrafo8">Si utiliza nuestra(s) aplicación(es), también podemos recopilar la siguiente información si elige proporcionarnos acceso o permisos:</string>
    <string name="lbl_politica_parrafo9"><u>Acceso al dispositivo móvil</u>. Podemos solicitar acceso o permisos a ciertas funciones de su dispositivo móvil, incluido el calendario, recordatorios, almacenamiento y otras funciones. Si desea cambiar nuestro acceso o permisos, puede hacerlo en la configuración de su dispositivo.</string>
    <string name="lbl_politica_parrafo11"><u>Notificaciones push</u>. Podemos solicitar enviarle notificaciones push sobre su cuenta o ciertas funciones de la(s) aplicación(es). Si desea optar por no recibir este tipo de comunicaciones, puede desactivarlas en la configuración de su dispositivo.</string>
    <string name="lbl_politica_parrafo12">Esta información se necesita principalmente para mantener la seguridad y operación de nuestra(s) aplicación(es), para la solución de problemas y para nuestros fines internos de análisis e informes.</string>
    <string name="lbl_politica_subtitulo_parrafo14">Información recopilada automáticamente</string>
    <string name="lbl_politica_parrafo14">Recopilamos automáticamente cierta información cuando visita, utiliza o navega por los servicios. Esta información no revela su identidad específica (como su nombre o información de contacto), pero puede incluir información sobre el dispositivo y el uso, como su dirección de Protocolo de Internet (IP), características del navegador y del dispositivo, sistema operativo, preferencias de idioma, URL de referencia, nombre del dispositivo, país, ubicación, información sobre cómo y cuándo utiliza nuestros servicios, y otra información técnica. Esta información se necesita principalmente para mantener la seguridad y operación de nuestros servicios, así como para nuestros fines internos de análisis e informes.</string>
    <string name="lbl_politica_titulo_parrafo15">4. ¿Está segura la información sobre mí?</string>
    <string name="lbl_politica_parrafo15">La información sensible se almacena exclusivamente en el dispositivo de manera local, garantizando así un nivel adicional de seguridad y privacidad. Además, la información es cifrada mediante algoritmos de encriptación seguros.</string>
    <string name="lbl_politica_titulo_parrafo16">5. ¿En qué bases legales nos basamos para procesar su información?</string>
    <string name="lbl_politica_parrafo16">El Reglamento General de Protección de Datos (RGPD) y el GDPR del Reino Unido nos exigen explicar las bases legales válidas en las que confiamos para procesar su información personal. Por lo tanto, podemos depender de las siguientes bases legales para procesar su información personal:</string>
    <string name="lbl_politica_parrafo17"><u>Consentimiento</u>: Podemos procesar su información si nos ha dado permiso (es decir, consentimiento) para utilizar su información personal para un propósito específico. Puede retirar su consentimiento en cualquier momento.</string>
    <string name="lbl_politica_parrafo18"><u>Intereses legítimos</u>: Podemos procesar su información cuando creemos que es razonablemente necesario para alcanzar nuestros legítimos intereses comerciales, y esos intereses no superan sus intereses, derechos fundamentales y libertades. Por ejemplo, podemos procesar su información personal para algunos de los propósitos mencionados a continuación:</string>
    <string name="lbl_politica_parrafo181">&#8226; Analizar cómo se utilizan nuestros servicios para mejorarlos y atraer y retener a los usuarios.</string>
    <string name="lbl_politica_parrafo182">&#8226; Apoyar nuestras actividades de marketing.</string>
    <string name="lbl_politica_parrafo183">&#8226; Diagnosticar problemas y/o prevenir actividades fraudulentas.</string>
    <string name="lbl_politica_parrafo184">&#8226; Comprender cómo nuestros usuarios utilizan nuestros productos y servicios para mejorar la experiencia del usuario.</string>
    <string name="lbl_politica_parrafo19"><u>Obligaciones legales</u>: Podemos procesar su información cuando consideramos que es necesario cumplir con nuestras obligaciones legales, como cooperar con un cuerpo policial o una agencia reguladora, ejercer o defender nuestros derechos legales, o divulgar su información como evidencia en litigios en los que estemos involucrados.</string>
    <string name="lbl_politica_parrafo20"><u>Intereses vitales</u>: Podemos procesar su información cuando consideramos que es necesario para proteger sus intereses vitales o los intereses vitales de un tercero, como situaciones que involucren posibles amenazas a la seguridad de cualquier persona.</string>
    <string name="lbl_politica_titulo_parrafo21">6. Cambios en la política de privacidad</string>
    <string name="lbl_politica_parrafo21">Podemos actualizar nuestra política de privacidad cuando sea necesario. Le notificaremos sobre cualquier cambio publicando la nueva política de privacidad en esta página.</string>
    <string name="lbl_politica_parrafo22">Le informaremos por correo electrónico y/o mediante un aviso destacado en nuestro servicio, antes de que el cambio entre en vigor, y actualizaremos la fecha "Última actualización" en la parte superior de esta política de privacidad.</string>
    <string name="lbl_politica_parrafo23">Se le recomienda revisar periódicamente esta política de privacidad para conocer cualquier cambio. Los cambios en esta política de privacidad son efectivos cuando se publican en esta página.</string>
    <string name="lbl_politica_titulo_parrafo24">7. Métodos de contacto</string>
    <string name="lbl_politica_parrafo24">Si tiene alguna pregunta sobre esta Política de Privacidad, puede contactarnos por correo electrónico: plantea.asistencia@gmail.com</string>
    <string name="eventos_y_planificaciones">Eventos y planificaciones</string>
    <string name="inicio">Inicio</string>
</resources>