<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?customBgColor">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.plantea.presentacion.fragmentos.NavigationTopFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/lbl_politica_privacidad"
                android:textColor="?colorOnSurface"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/lbl_ultima_actualizacion"
                android:textColor="?colorOnSurface"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo1"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo2"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/lbl_politica_titulo_parrafo3"
                android:textColor="?colorOnSurface"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo3"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/lbl_politica_titulo_parrafo4"
                android:textColor="?colorOnSurface"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo4"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/lbl_politica_titulo_parrafo5"
                android:textColor="?colorOnSurface"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo5"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_politica_subtitulo_parrafo6"
                android:textColor="?colorOnSurface"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo6"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_politica_subtitulo_parrafo7"
                android:textColor="?colorOnSurface"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo7"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_politica_subtitulo_parrafo8"
                android:textColor="?colorOnSurface"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo8"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo9"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo11"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo12"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_politica_subtitulo_parrafo14"
                android:textColor="?colorOnSurface"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo14"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/lbl_politica_titulo_parrafo15"
                android:textColor="?colorOnSurface"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo15"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/lbl_politica_titulo_parrafo16"
                android:textColor="?colorOnSurface"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo16"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo17"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo18"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/lbl_politica_parrafo181"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="10dp"
                android:text="@string/lbl_politica_parrafo182"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="10dp"
                android:text="@string/lbl_politica_parrafo183"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="10dp"
                android:text="@string/lbl_politica_parrafo184"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo19"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo20"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/lbl_politica_titulo_parrafo21"
                android:textColor="?colorOnSurface"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo21"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo22"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo23"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/lbl_politica_titulo_parrafo24"
                android:textColor="?colorOnSurface"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_politica_parrafo24"
                android:textColor="?colorOnSurface"
                android:justificationMode="inter_word"
                android:textSize="13sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>